--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<a class="button" href="Pemodola/index.html" target="_blank">Pemodola</a>
 						</div>
 						<div>
-							<a class="button" href="Pemodola/index.html" target="_blank">Pemodola</a>
+							<a class="button" href="https://www.facebook.com/profile.php?id=100006685424661" target="_blank">My facebook profile</a>
 						</div>
 					</div>
 				</div>
