--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
 						<div>
 							<a class="button" href="https://www.facebook.com/profile.php?id=100006685424661" target="_blank">My facebook profile</a>
 						</div>
+						
+						<div>
+							<a class="button" href="Expert work/index.html" target="_blank"> Extra work</a>
+						</div>
 					</div>
 				</div>
 			</div>
