--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
 						<div>
 							<a class="button" href="Expert work/index.html" target="_blank"> Extra work</a>
 						</div>
+						<div>
+							<a class="button" href="Class-two/index.html" target="_blank">work-2</a>
+						</div>
 					</div>
 				</div>
 			</div>
